Move folder LeagueDemo to League.Demo
* Rename LeagueDemo.csproj to League.Demo.csproj
* Adjust namespace of League.Demo to League.Web

--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @using League.Routing
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
-@using LeagueDemo.Controllers
+@using League.Web.Controllers
 @inject ITenantContext TenantContext
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
