--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -1,7 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Extensions
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @inject Axuno.Tools.DateAndTime.TimeZoneConverter TimeZoneConverter
@@ -66,9 +64,84 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    @*<link rel="stylesheet" media="all" href="@Url.Content("~/lib/bootstrap/bootstrap.min.css")">*@
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style type="text/css">
+        @* 
+            <!-- Bootstrap 5 (compared to Bootstrap 4) no longer includes custom CSS for printing -->
+            <!-- This is a copy of the Bootstrap 4 print styles -->
+            <!-- Source: https://github.com/coliff/bootstrap-print-css and https://christianoliff.com/blog/bootstrap-5-print-stylesheet/ --> 
+        *@
+        @@media print {
+            *,
+            *::before,
+            *::after {
+                text-shadow: none !important;
+                box-shadow: none !important;
+            }
+            a:not(.btn) {
+                text-decoration: underline;
+            }
+            abbr[title]::after {
+                content: " (" attr(title) ")";
+            }
+            pre {
+                white-space: pre-wrap !important;
+            }
+            pre,
+            blockquote {
+                border: 1px solid #adb5bd;
+                page-break-inside: avoid;
+            }
+            tr,
+            img {
+                page-break-inside: avoid;
+            }
+            p,
+            h2,
+            h3 {
+                orphans: 3;
+                widows: 3;
+            }
+            h2,
+            h3 {
+                page-break-after: avoid;
+            }
+            @@page {
+                size: a3;
+            }
+            body {
+                min-width: 992px !important;
+            }
+            .container {
+                min-width: 992px !important;
+            }
+            .badge {
+                border: 1px solid #000;
+            }
+            .table {
+                border-collapse: collapse !important;
+            }
+            .table td,
+            .table th {
+                background-color: #fff !important;
+            }
+            .table-bordered th,
+            .table-bordered td {
+                border: 1px solid #dee2e6 !important;
+            }
+            .table-dark {
+                color: inherit;
+            }
+            .table-dark th,
+            .table-dark td,
+            .table-dark thead th,
+            .table-dark tbody + tbody {
+                border-color: #dee2e6;
+            }
+        }
+    </style>
+    <style type="text/css">
+        @* <!-- Custom styles for League ReportSheet --> *@
         @@media print {
             @@page {
                 size: 210mm 297mm;
@@ -160,13 +233,13 @@
                 <div>@TenantContext.OrganizationContext.Name - @Model.TournamentName</div>
                 <div style="font-size: 14pt; font-weight: bold">@ViewData["Title"] - @Model.RoundDescription</div>
             </div>
-            <div class="col-6 text-left" style="padding: 0">
+            <div class="col-6 text-start" style="padding: 0">
                 <div>&nbsp;</div>
                 <div>@Localizer["Team"] <span class="team-circle-small">A</span><strong> @Model.HomeTeamNameForRound</strong></div>
                 <div>@Localizer["Team"] <span class="team-circle-small">B</span><strong> @Model.GuestTeamNameForRound</strong></div>
             </div>
             <div class="col-6" style="padding: 0">
-                <div class="text-right">
+                <div class="text-end">
                     @(Model.OrigPlannedStart.HasValue ? $"{Localizer["Changed date"].Value}:" : $"{Localizer["Date"].Value}:")
                     @if (Model.PlannedStart.HasValue && TimeZoneConverter != null)
                     {
@@ -177,8 +250,8 @@
                         <text>___________</text>
                     }
                 </div>
-                <div class="text-right">@Localizer["Start time"]: ___________</div>
-                <div class="text-right">@Localizer["End time"]: ___________</div>
+                <div class="text-end">@Localizer["Start time"]: ___________</div>
+                <div class="text-end">@Localizer["End time"]: ___________</div>
             </div>
         </div>
         <div style="height: .8em"></div>
@@ -226,9 +299,9 @@
                 {
                     <div class="border border-top-0 p-0">
                         <div class="row no-gutters">
-                            <div class="col-5 text-right p-0">@Repeat("O ", numOfSubstitutions)</div>
+                            <div class="col-5 text-end p-0">@Repeat("O ", numOfSubstitutions)</div>
                             <div class="col-2 text-center p-0">&nbsp;&rlarr;&nbsp;</div>
-                            <div class="col-5 text-left p-0">@Repeat(" O", numOfSubstitutions)</div>
+                            <div class="col-5 text-start p-0">@Repeat(" O", numOfSubstitutions)</div>
                         </div>
                     </div>
                 }
@@ -239,7 +312,7 @@
             <div class="col-6 border">
                 <div class="row">
                     <div class="col-4 border">
-                        <div class="text-left">@Localizer["Results"]</div><div class="text-right">@Localizer["Team"]</div>
+                        <div class="text-start">@Localizer["Results"]</div><div class="text-end">@Localizer["Team"]</div>
                     </div>
                     <div class="col-4 text-center border pt-1 pb-1">
                         <span class="team-circle">&nbsp;</span>
