--- a/League/Views/Match/ReportSheet.cshtml
+++ b/League/Views/Match/ReportSheet.cshtml
@@ -1,12 +1,21 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
-@using TournamentManager.MultiTenancy
-@inject IViewLocalizer Localizer
+﻿@using TournamentManager.MultiTenancy
+@using League.Views
+@using Microsoft.Extensions.Localization
 @inject ITenantContext TenantContext
 @inject Axuno.Tools.DateAndTime.TimeZoneConverter TimeZoneConverter
+@inject IStringLocalizerFactory StringLocalizerFactory
+
 @model TournamentManager.DAL.TypedViewClasses.MatchReportSheetRow
 @{
     Layout = null;
-    ViewData["Title"] = Localizer["Match Report Sheet"].Value;
+    
+    // Injecting an IViewLocalizer does not seem to work when using a RazorViewToStringRenderer,
+    // because the resource file can't be found.
+    // So we create an IStringLocalizer from the injected IStringLocalizerFactory:
+    const string resourceBaseName = $"{nameof(League)}.{nameof(League.Views)}.{nameof(ViewNames.Match)}.{ViewNames.Match.ReportSheet}";
+    var localizer = StringLocalizerFactory.Create(resourceBaseName, nameof(League));
+
+    ViewData["Title"] = localizer["Match Report Sheet"].Value;
     var ballPointsToWin = new List<int>();
     if (Model.BestOf)
     {
@@ -235,12 +244,12 @@
             </div>
             <div class="col-6 text-start" style="padding: 0">
                 <div>&nbsp;</div>
-                <div>@Localizer["Team"] <span class="team-circle-small">A</span><strong> @Model.HomeTeamNameForRound</strong></div>
-                <div>@Localizer["Team"] <span class="team-circle-small">B</span><strong> @Model.GuestTeamNameForRound</strong></div>
+                <div>@localizer["Team"] <span class="team-circle-small">A</span><strong> @Model.HomeTeamNameForRound</strong></div>
+                <div>@localizer["Team"] <span class="team-circle-small">B</span><strong> @Model.GuestTeamNameForRound</strong></div>
             </div>
             <div class="col-6" style="padding: 0">
                 <div class="text-end">
-                    @(Model.OrigPlannedStart.HasValue ? $"{Localizer["Changed date"].Value}:" : $"{Localizer["Date"].Value}:")
+                    @(Model.OrigPlannedStart.HasValue ? $"{localizer["Changed date"].Value}:" : $"{localizer["Date"].Value}:")
                     @if (Model.PlannedStart.HasValue && TimeZoneConverter != null)
                     {
                         @($"{TimeZoneConverter.ToZonedTime(Model.PlannedStart)!.DateTimeOffset.DateTime:D} - {TimeZoneConverter.ToZonedTime(Model.PlannedStart)!.DateTimeOffset.DateTime:t}")
@@ -250,8 +259,8 @@
                         <text>___________</text>
                     }
                 </div>
-                <div class="text-end">@Localizer["Start time"]: ___________</div>
-                <div class="text-end">@Localizer["End time"]: ___________</div>
+                <div class="text-end">@localizer["Start time"]: ___________</div>
+                <div class="text-end">@localizer["End time"]: ___________</div>
             </div>
         </div>
         <div style="height: .8em"></div>
@@ -259,7 +268,7 @@
             @for (var i = 1; i <= numberOfSets; i++)
             {
                 <div class="col text-center border border-bottom-0">
-                    <strong>@Localizer["Set #{0}", i]</strong>
+                    <strong>@localizer["Set #{0}", i]</strong>
                 </div>
             }
             @for (var i = 1; i <= numberOfSets; i++)
@@ -281,7 +290,7 @@
             @for (var i = 1; i <= numberOfSets; i++)
             {
                 <div class="col text-center border border-top-0">
-                    O&nbsp;&nbsp;@Localizer["1st service"]&nbsp;&nbsp;O
+                    O&nbsp;&nbsp;@localizer["1st service"]&nbsp;&nbsp;O
                 </div>
             }
             @if (numOfTimeOuts > 0)
@@ -312,7 +321,7 @@
             <div class="col-6 border">
                 <div class="row">
                     <div class="col-4 border">
-                        <div class="text-start">@Localizer["Results"]</div><div class="text-end">@Localizer["Team"]</div>
+                        <div class="text-start">@localizer["Results"]</div><div class="text-end">@localizer["Team"]</div>
                     </div>
                     <div class="col-4 text-center border pt-1 pb-1">
                         <span class="team-circle">&nbsp;</span>
@@ -327,7 +336,7 @@
                             for (var i = 1; i <= numberOfSets; i++)
                             {
                                 <div class="col-4 border" style="line-height: 2rem">
-                                    @Localizer["Set #{0}", i]
+                                    @localizer["Set #{0}", i]
                                 </div>
                                 <div class="col-4 text-center border">
 
@@ -340,7 +349,7 @@
                     }
 
                     <div class="col-4 border" style="line-height: 2rem">
-                        @Localizer["Ball points"]
+                        @localizer["Ball points"]
                     </div>
                     <div class="col-4 text-center border">
 
@@ -349,7 +358,7 @@
 
                     </div>
                     <div class="col-4 border" style="line-height: 2rem">
-                        @Localizer["Set points"]
+                        @localizer["Set points"]
                     </div>
                     <div class="col-4 text-center border">
 
@@ -358,7 +367,7 @@
 
                     </div>
                     <div class="col-4 border" style="line-height: 2rem">
-                        @Localizer["Match points"]
+                        @localizer["Match points"]
                     </div>
                     <div class="col-4 text-center border">
 
@@ -373,11 +382,11 @@
             </div>
             <div class="col border">
                 <div class="row h-100">
-                    <div class="col-12" style="border: 3px solid black">@Localizer["Winner"]:<br />&nbsp;</div>
+                    <div class="col-12" style="border: 3px solid black">@localizer["Winner"]:<br />&nbsp;</div>
                     <div class="col-12">&nbsp;<br />&nbsp;<br />&nbsp;</div>
-                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">A</span> &uarr;</div>
+                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @localizer["Signature"] @localizer["Team"] <span class="team-circle-small">A</span> &uarr;</div>
                     <div class="col-12">&nbsp;<br />&nbsp;<br />&nbsp;</div>
-                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @Localizer["Signature"] @Localizer["Team"] <span class="team-circle-small">B</span> &uarr;</div>
+                    <div class="col-12 border border-left-0 border-right-0 text-center">&uarr; @localizer["Signature"] @localizer["Team"] <span class="team-circle-small">B</span> &uarr;</div>
                 </div>
             </div>
             <div class="col-12 text-center">
