Fix League.Views' possible null reference warnings
* Make several League.Models members NRT
* Fix: Email2 can now be removed
* Contact form always uses OrganizationContext.ShortName

--- a/League/Views/Account/PleaseConfirmEmail.cshtml
+++ b/League/Views/Account/PleaseConfirmEmail.cshtml
@@ -4,7 +4,7 @@
 @inject Axuno.Tools.DateAndTime.TimeZoneConverter TimeZoneConverter
 @inject IOptions<DataProtectionTokenProviderOptions> TokenProviderOptions
 @{
-    var tokenExpiresOn = TimeZoneConverter.ToZonedTime(DateTime.UtcNow.Add(TokenProviderOptions.Value.TokenLifespan));
+    var tokenExpiresOn = TimeZoneConverter.ToZonedTime(DateTime.UtcNow.Add(TokenProviderOptions.Value.TokenLifespan))!;
     ViewData["Title"] = Localizer["Please confirm your email address"];
 }
 <h2>@ViewData["Title"].</h2>
