--- a/League/Views/Match/EnterResult.cshtml
+++ b/League/Views/Match/EnterResult.cshtml
@@ -9,7 +9,7 @@
 @{ ViewContext.ClientValidationEnabled = false;}  @* We rely on datepicker and server side validation *@
 @model League.Models.MatchViewModels.EnterResultViewModel
 @{
-    ViewData["Title"] = Localizer["Enter Match Result"].Value + " - " + Model.Tournament.Name;
+    ViewData["Title"] = Localizer["Enter Match Result"].Value + " - " + Model.Tournament?.Name;
     var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
 
     string AddSetErr(int setIndex)
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="form-group col-12 col-md-6">
                 <label class="mt-0">@Localizer["Opponents"]</label>
-                <div class="font-weight-bold d-inline-block">@Model.Opponent.Home</div><div class="font-weight-bold d-inline-block">&nbsp;:&nbsp;</div><div class="font-weight-bold d-inline-block">@Model.Opponent.Guest</div>
+                <div class="font-weight-bold d-inline-block">@Model.Opponent!.Home</div><div class="font-weight-bold d-inline-block">&nbsp;:&nbsp;</div><div class="font-weight-bold d-inline-block">@Model.Opponent.Guest</div>
             </div>
         </div>
         <div class="row">
