--- a/League/Views/TeamApplication/Confirm.cshtml
+++ b/League/Views/TeamApplication/Confirm.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-9">
             <div><span class="font-weight-bold d-inline-block mr-3">@Model.RoundDescription</span><span class="text-muted small">@Model.RoundTypeDescription</span></div>
         </div>
-        <div class="text-success col-md-3">@(Model.SessionModel.Team.IsNew ? Localizer["New team"] : Localizer["Existing team"])</div>
+        <div class="text-success col-md-3">@(Model.SessionModel.Team!.IsNew ? Localizer["New team"] : Localizer["Existing team"])</div>
         <div class="col-md-9 font-weight-bold">@Model.SessionModel.Team.Name</div>
         @if (!string.IsNullOrEmpty(Model.SessionModel.Team.ClubName))
         {
@@ -31,9 +31,9 @@
         {
             // MatchTime is defined as a zoned time, NOT UTC. It is always the same, never mind DST
             <div class="text-success col-md-3">@Localizer["Home match day"]</div>
-            <div class="col-md-9 mb-2"><i class="far fa-calendar-alt"></i><span class="d-inline-block mr-2"></span>@DateTimeFormatInfo.CurrentInfo?.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek), @(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value).ToShortTimeString()) @(TimeZoneConverter.ToZonedTime(DateTime.UtcNow).Abbreviation)</div>
+            <div class="col-md-9 mb-2"><i class="far fa-calendar-alt"></i><span class="d-inline-block mr-2"></span>@DateTimeFormatInfo.CurrentInfo.GetDayName((DayOfWeek)Model.SessionModel.Team.MatchDayOfWeek), @(DateTime.UtcNow.Date.Add(Model.SessionModel.Team.MatchTime.Value).ToShortTimeString()) @(TimeZoneConverter.ToZonedTime(DateTime.UtcNow)!.Abbreviation)</div>
         }
-        <div class="text-success col-md-3">@(Model.SessionModel.Venue.IsNew ? Localizer["New venue"] : Localizer["Existing venue"])</div>
+        <div class="text-success col-md-3">@(Model.SessionModel.Venue!.IsNew ? Localizer["New venue"] : Localizer["Existing venue"])</div>
         <div class="col-md-7 mb-2">
             <div><i class="fas fa-map-marker-alt"></i><span class="d-inline-block mr-2"></span><span class="font-weight-bold">@Model.SessionModel.Venue.Name</span></div>
             <div>@(string.Join(", ", Model.SessionModel.Venue.PostalCode, Model.SessionModel.Venue.City, Model.SessionModel.Venue.Street))</div>
