--- a/League/Views/_ViewImports.cshtml
+++ b/League/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using League.Models
 @using League.Models.AccountViewModels
 @using League.Models.ManageViewModels
+@using League.MultiTenancy
 @using Microsoft.AspNetCore.Identity
 @using System.Security.Claims
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
